--- a/ansible-playbooks/roles/sample/templates/tomcat.conf.j2
+++ b/ansible-playbooks/roles/sample/templates/tomcat.conf.j2
@@ -1,3 +1,3 @@
 ProxyRequests Off
-ProxyPass /student http://{{ansible_hostname}}:8080/student
-ProxyPassReverse /student http://{{ansible_hostname}}:8080/student
+ProxyPass /student http://"{{ansible_hostname}}":8080/student
+ProxyPassReverse /student http://"{{ansible_hostname}}":8080/student
