--- a/ansible-playbooks/roles/sample/templates/context.xml.j2
+++ b/ansible-playbooks/roles/sample/templates/context.xml.j2
@@ -30,5 +30,5 @@
  <Resource name="jdbc/TestDB" auth="Container" type="javax.sql.DataSource"
                maxTotal="100" maxIdle="30" maxWaitMillis="10000"
                username="{{DBUSER}}" password="{{DBPASS}}" driverClassName="com.mysql.jdbc.Driver"
-               url="jdbc:mysql://{{ansible_hostname}}:3306/studentapp"/>
+               url="jdbc:mysql://{{ansible_fqdn}}:3306/studentapp"/>
 </Context> 
